see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-May-2010 Ron Severdia
# Fix CSS & language strings for Weblinks UI
+ Added missing icon
$ Language fixes

17-May-2010 Mark Dexter
 ^ Ordering of toolbar icons for some views

17-May-2010 Mark Dexter
# Fix language strings in New Menu Item

17-May-2010 Andrew Eddie
 ^ Fixed issue [#20431] Module cache not activated in defult installation and sample data module parameters (Klas Berlič)
 # Fixed issue [#20445] The pagebreak plugin produces a fatal error.
 # Fixed issue [#20452] Turn off module debugging by default (Elin Waring).
 # Fixed issue [#20430] Multiple cache and performance related optimizations and bugfixes - results in 30% decrease on load times (Klas Berlič).
 # Fixed issue [#20318] Change confusing language in installer (Elin Waring).
 # Fixed issue [#20386] [patch] update Hathor overrides with changes made to com_menu default_batch.php (Andrea Tarr).
 # Fixed issue [#20163] Media Manager Max Upload Size displaying incorrectly (Anthony McLin, Elin Waring).
 # Fixed issue [#20435] single newsfeed error.
 # Fixed issue [#20287] Rendering config.xml files generates php warning [patch included] (Jonatas Braganca).
 # Fixed issue [#20410] Module Manager for Admin modules includes Site only options (Elin Waring).
 # Fixed issue [#20292] Cannot change a menu type that is set to alias.

16-May-2010 Mark Dexter
# [#20312] Access Control not implemented in menus
# [#20450] Missing modal and field for single news feed selection
# Sample data fixes (Elin Waring)
# Fix default component parameters (Elin Waring)
# Partial fix of system tests

16-May-2010 Chris Davenport