@@ -129,6 +129,7 @@ JLIB_APPLICATION_ERROR_ACCESS_FORBIDDEN="Access forbidden"
 JLIB_APPLICATION_ERROR_CHECKIN_FAILED="Check-in failed with the following error: %s"
 JLIB_APPLICATION_ERROR_CHECKIN_USER_MISMATCH="The user checking in does not match the user who checked out the item."
 JLIB_APPLICATION_ERROR_CHECKOUT_FAILED="Check-out failed with the following error: %s"
+JLIB_APPLICATION_ERROR_COMPONENT_NOT_FOUND="Component not found"
 JLIB_APPLICATION_ERROR_INVALID_CONTROLLER="Invalid controller of type %s."
 JLIB_APPLICATION_ERROR_INVALID_CONTROLLER_CLASS="Invalid controller class named %s."
 JLIB_APPLICATION_ERROR_SAVE_FAILED="Save failed with the following error: %s"
