@@ -127,7 +127,7 @@ else :
 	<dd class="createdby">
 		<?php $author = $params->get('link_author', 0) ? JHTML::_('link',JRoute::_('index.php?option=com_users&view=profile&member_id='.$this->item->created_by),$this->item->author) : $this->item->author; ?>
 		<?php $author=($this->item->created_by_alias ? $this->item->created_by_alias : $author);?>
-	<?php echo JText::sprintf('Written_by', $author); ?>
+	<?php echo JText::sprintf('COM_CONTENT_WRITTEN_BY', $author); ?>
 		</dd>
 <?php endif; ?>
 <?php if ($params->get('show_hits')) : ?>
