@@ -110,7 +110,7 @@ JHtml::addIncludePath(JPATH_COMPONENT.DS.'helpers');
 	<dd class="createdby">
 		<?php $author = $this->params->get('link_author', 0) ? JHTML::_('link',JRoute::_('index.php?option=com_users&view=profile&member_id='.$this->item->created_by),$this->item->author_name) : $this->item->author_name; ?>
 		<?php $author = ($this->item->created_by_alias ? $this->item->created_by_alias : $author); ?>
-	<?php echo JText::sprintf('Written_by', $author); ?>
+	<?php echo JText::sprintf('COM_CONTENT_WRITTEN_BY', $author); ?>
 		</dd>
 	<?php endif; ?>
 <?php if ($params->get('show_hits')) : ?>
@@ -140,7 +140,7 @@ JHtml::addIncludePath(JPATH_COMPONENT.DS.'helpers');
 		<p class="readmore">
 				<a href="<?php echo $link; ?>">
 					<?php if (!$params->get('access-view')) :
-						echo JText::_('REGISTER_TO_READ_MORE');
+						echo JText::_('COM_CONTENT_REGISTER_TO_READ_MORE');
 					elseif ($readmore = $this->item->alternative_readmore) :
 						echo $readmore;
 					else :
