@@ -27,7 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-16-May-2010 Ron Severdia
+17-May-2010 Jean-Marie Simonet
+$ Fixed some beez language strings + a CSS in bluestork
+
+17-May-2010 Ron Severdia
 # Fix CSS & language strings for Weblinks UI
 + Added missing icon
 $ Language fixes
